hhh/20200005/25_error.txt
/home/wind.dong.dream/lsp/LinuxSystemProgramming1/STD_DIR/20200005/25.c: In function ‘main’:
/home/wind.dong.dream/lsp/LinuxSystemProgramming1/STD_DIR/20200005/25.c:16:21: error: ‘ssu_signal’ undeclared (first use in this function); did you mean ‘ssignal’?
     signal(SIGUSR1, ssu_signal);
                     ^~~~~~~~~~
                     ssignal
/home/wind.dong.dream/lsp/LinuxSystemProgramming1/STD_DIR/20200005/25.c:16:21: note: each undeclared identifier is reported only once for each function it appears in
